--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "trash"
 version = "0.1.0"
 authors = ["Warren Galyen"]
-edition = "2018"
 license = "MIT"
 license-file = "LICENSE"
+readme = "Readme.md"
+description = "A Rust library for moving files to the Recycle Bin"
+keywords = ["remove", "trash", "rubbish", "recycle", "bin"]
+repository = "https://github.com/warrengalyen/trash-rs"
+edition = "2018"
 
 [dependencies]
 
