Update to the readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.1"
 authors = ["Warren Galyen"]
 license = "MIT"
 readme = "Readme.md"
-description = "A Rust library for moving files to the Recycle Bin"
+description = "A library for moving files and folders to the Recycle Bin"
 keywords = ["remove", "trash", "rubbish", "recycle", "bin"]
 repository = "https://github.com/warrengalyen/trash-rs"
 edition = "2018"
